# Rust-vs-C--Benchmark

./: ARCHITECTURE.md  BENCHMARKS.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  PROJECT_TREE.txt  README.md  START_HERE.md  USAGE.md  build.py  quick_start.sh
cpp/: CMakeLists.txt
cpp/src/: fft.cpp  json_parse.cpp  mandelbrot.cpp  matrix_multiply.cpp  metal_compute.mm  parallel_quicksort.cpp  prime_sieve.cpp  ray_tracer.cpp  sha256.cpp  thread_pool.cpp
results/: benchmark_results.json
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: fft.rs  json_parse.rs  mandelbrot.rs  matrix_multiply.rs  metal_compute.rs  parallel_quicksort.rs  prime_sieve.rs  ray_tracer.rs  sha256.rs  thread_pool.rs
